# TaskBuddy

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  全栈工程师入职考题_对话智能体页面基础功能设计.md
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: errors.py  sse.py
apps/api/app/api/routes/: conversations.py  providers.py
apps/api/app/application/: conversations.py  runs.py
apps/api/app/domain/: messages.py  provider.py
apps/api/app/prompt/: builder.py  models.py  system.md  validator.py
apps/api/app/providers/: deepseek.py  factory.py  mock.py  openai_compatible.py  registry.py
apps/api/app/repositories/: conversations.py  database.py  models.py
apps/api/tests/: test_health.py
apps/api/tests/api/: conftest.py  test_conversations.py  test_lifecycle.py  test_streaming.py
apps/api/tests/prompt/: test_builder.py  test_validator.py
apps/api/tests/providers/: test_deepseek.py  test_mock.py  test_openai_compatible.py
apps/api/tests/repositories/: test_conversations.py
apps/web/: package.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: ai-collaboration.md  manual-test-checklist.md  prompt-design.md  redundancy-audit.md
docs/superpowers/plans/: 2026-07-15-provider-markdown-prompt-implementation.md  2026-07-15-taskbuddy-chat-implementation.md
docs/superpowers/specs/: 2026-07-15-provider-markdown-prompt-design.md  2026-07-15-taskbuddy-chat-design.md
scripts/: prepare-e2e.mjs
tests/e2e/: chat.spec.ts
(+22 files in other folders)
