[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "taskbuddy-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
  "aiosqlite>=0.21,<1",
  "fastapi>=0.116,<1",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]
model = ["openai-agents>=0.2,<1"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.setuptools.packages.find]
include = ["app*"]
